--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,3 +15,21 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 img {
   max-width: 100%;
 }
+
+.registration-form{
+  .form-header{
+    display: inline-flex;
+    img{
+      padding-right: 20px;
+    }
+  }
+  .categories{
+    // display: inline-table;
+    input{
+      margin-bottom: 15px;
+    }
+  }
+  .address-form{
+    // display: inline-block;
+  }
+}
