--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,11 +17,25 @@ img {
 }
 
 .registration-form{
+  padding-top: 30px;
   .form-header{
-    display: inline-flex;
+    display: inline-block;
+    background-color: #FEF9E7;
+    border-radius: 5px;
+    box-shadow: -1px 6px 5px 0px rgba(0,0,0,0.75);
+    margin-bottom: 20px;
     img{
-      padding-right: 20px;
+      // width: 150px;
+      // height: 150px;
+      border-radius: 30px;
+      background-size: cover;
+      background-repeat: no-repeat;
+      padding: 10px;
     }
+  }
+  .form-container{
+    margin-top: 80px;
+    // background-color: blue;
   }
   .categories{
     // display: inline-table;
@@ -29,7 +43,5 @@ img {
       margin-bottom: 15px;
     }
   }
-  .address-form{
-    // display: inline-block;
-  }
+
 }
