--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -43,5 +43,13 @@ img {
       margin-bottom: 15px;
     }
   }
+}
 
+.specials-counter{
+  height: 20px;
+  width: 20px;
+  text-align: center;
+  color: white;
+  background-color: blue;
+  border-radius: 100%;
 }
