--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -48,12 +48,13 @@ img {
   // border: 2px solid grey;
   border-radius: 2px;
   box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.75);
-  height: 200px;
+  height: auto;
   margin: 10px;
   padding: 10px;
 
 }
 .specials-counter{
+
 
   height: 30px;
   width: 30px;
