--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,14 +15,13 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 img {
   max-width: 100%;
 }
-
+.dashboard-dessert {
+  margin-bottom: 30px;
+}
 .registration-form{
   padding-top: 30px;
   .form-header{
     display: inline-block;
-    background-color: #FEF9E7;
-    border-radius: 5px;
-    box-shadow: -1px 6px 5px 0px rgba(0,0,0,0.75);
     margin-bottom: 20px;
     img{
       // width: 150px;
@@ -46,8 +45,8 @@ img {
 }
 .restaurant-card{
   // border: 2px solid grey;
-  border-radius: 2px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.75);
+  // border-radius: 2px;
+  // box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.75);
   height: auto;
   margin: 10px;
   padding: 10px;
