removed material ui, breaking

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,6 +15,11 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 img {
   max-width: 100%;
 }
+.dashboard-specials{
+  // transform: translateY( 30%);
+
+}
+
 .dashboard-dessert {
   margin-bottom: 30px;
 }
