--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,130 +15,137 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 img {
   max-width: 100%;
 }
-.dashboard-specials{
-  // transform: translateY( 30%);
 
+.viewall-container{
+  background-color: lightgrey;
 }
 
-.dashboard-dessert {
-  margin-bottom: 30px;
-}
-.registration-form{
-  padding-top: 30px;
-  .form-header{
-    display: inline-block;
-    margin-bottom: 20px;
-    img{
-      // width: 150px;
-      // height: 150px;
-      border-radius: 30px;
-      background-size: cover;
-      background-repeat: no-repeat;
-      padding: 10px;
-    }
-  }
-  .form-container{
-    margin-top: 80px;
-    // background-color: blue;
-  }
-  .categories{
-    // display: inline-table;
-    input{
-      margin-bottom: 15px;
-    }
-  }
-}
-.restaurant-card{
-  // border: 2px solid grey;
-  // border-radius: 2px;
-  // box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.75);
-  height: auto;
-  margin: 10px;
-  padding: 10px;
-
-}
-.specials-counter{
 
 
-  height: 30px;
-  width: 30px;
-  float: right;
-  text-align: center;
-  color: white;
-  background-color: rgba(37, 36, 29, 0.45);
-  border-radius: 100%;
-  .counter-number{
-    margin-top: 5px;
-  }
-}
-
-.detailview-pane{
-  // margin-top: 20px;
-  .detailview-header{
-    // display: inline-block;
-    // background-image: url('http://il2.picdn.net/shutterstock/videos/17861914/thumb/1.jpg');
-    // background-position: center;
-    // background-size: cover;
-    // padding-top: 10px;
-    padding-bottom: 20px;
-    box-shadow: -1px 4px 5px 0px rgba(0,0,0,0.75);
-
-    .detailview-header-img{
-      padding-top: 20px;
-    }
-    .detailview-header-text{
-      padding-top: 20px;
-      h1{
-        font-family: 'Raleway', sans-serif;
-        // color: #fff;
-      }
-      h4{
-        font-family: 'Josefin Sans', sans-serif;
-        font-style: italic;
-      }
-      h5{
-        font-family: 'Josefin Sans', sans-serif;
-        font-style: italic;
-      }
-      .detailview-header-review-img{
-  //header image from restaurant parse
-      }
-    }
-  }
-  .detailview-pane{
-    .detailview-description{
-      border-bottom: 1px solid grey;
-      p{
-        font-family: 'Open Sans', sans-serif;
-        padding: 10px;
-      }
-    }
-    .detailview-menu{
-      padding: 10px;
-      border-bottom: 1px solid grey;
-    }
-    .detailview-location-pane{
-      img{
-        height: 300px;
-        width: 300px;
-        padding: 5px;
-      }
-      .detailview-phone{
-        font-family: 'Open Sans', sans-serif;
-        font-weight: bold;
-      }
-      p{
-        font-family: 'Open Sans', sans-serif;
-
-      }
-    }
-  }
-  .detailview-specials{
-    margin-top: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-left: 2px solid grey;
 
 
-  }
-}
+// .dashboard-specials{
+//   // transform: translateY( 30%);
+//
+// }
+//
+// .dashboard-dessert {
+//   margin-bottom: 30px;
+// }
+// .registration-form{
+//   padding-top: 30px;
+//   .form-header{
+//     display: inline-block;
+//     margin-bottom: 20px;
+//     img{
+//       // width: 150px;
+//       // height: 150px;
+//       border-radius: 30px;
+//       background-size: cover;
+//       background-repeat: no-repeat;
+//       padding: 10px;
+//     }
+//   }
+//   .form-container{
+//     margin-top: 80px;
+//     // background-color: blue;
+//   }
+//   .categories{
+//     // display: inline-table;
+//     input{
+//       margin-bottom: 15px;
+//     }
+//   }
+// }
+// .restaurant-card{
+//   // border: 2px solid grey;
+//   // border-radius: 2px;
+//   // box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.75);
+//   height: 200px;
+//   margin: 10px;
+//   padding: 10px;
+//
+// }
+// .specials-counter{
+//
+//
+//   height: 30px;
+//   width: 30px;
+//   float: right;
+//   text-align: center;
+//   color: white;
+//   background-color: rgba(37, 36, 29, 0.45);
+//   border-radius: 100%;
+//   .counter-number{
+//     margin-top: 5px;
+//   }
+// }
+//
+// .detailview-pane{
+//   // margin-top: 20px;
+//   .detailview-header{
+//     // display: inline-block;
+//     // background-image: url('http://il2.picdn.net/shutterstock/videos/17861914/thumb/1.jpg');
+//     // background-position: center;
+//     // background-size: cover;
+//     // padding-top: 10px;
+//     padding-bottom: 20px;
+//     box-shadow: -1px 4px 5px 0px rgba(0,0,0,0.75);
+//
+//     .detailview-header-img{
+//       padding-top: 20px;
+//     }
+//     .detailview-header-text{
+//       padding-top: 20px;
+//       h1{
+//         font-family: 'Raleway', sans-serif;
+//         // color: #fff;
+//       }
+//       h4{
+//         font-family: 'Josefin Sans', sans-serif;
+//         font-style: italic;
+//       }
+//       h5{
+//         font-family: 'Josefin Sans', sans-serif;
+//         font-style: italic;
+//       }
+//       .detailview-header-review-img{
+//   //header image from restaurant parse
+//       }
+//     }
+//   }
+//   .detailview-pane{
+//     .detailview-description{
+//       border-bottom: 1px solid grey;
+//       p{
+//         font-family: 'Open Sans', sans-serif;
+//         padding: 10px;
+//       }
+//     }
+//     .detailview-menu{
+//       padding: 10px;
+//       border-bottom: 1px solid grey;
+//     }
+//     .detailview-location-pane{
+//       img{
+//         height: 300px;
+//         width: 300px;
+//         padding: 5px;
+//       }
+//       .detailview-phone{
+//         font-family: 'Open Sans', sans-serif;
+//         font-weight: bold;
+//       }
+//       p{
+//         font-family: 'Open Sans', sans-serif;
+//
+//       }
+//     }
+//   }
+//   .detailview-specials{
+//     margin-top: 20px;
+//     padding-top: 10px;
+//     padding-bottom: 10px;
+//     border-left: 2px solid grey;
+//   }
+// }
