--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -16,11 +16,45 @@ img {
   max-width: 100%;
 }
 
+//VIEWALL SEARCH
+.viewall-lisitng-row{
+  background-color: blue;
+  height: 6vw;
+  padding: 15px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
 
+//CATEGORIES BAR
+.categories-bar{
+  .categories-dropdown{
+
+    .btn{
+      width: 89%;
+      color: #616161;
+      background-color: #fff;
+      border: 1px solid #9E9E9E;
+      border-radius: 0;
+      padding: 2px;
+      margin-top: 25px;
+
+      .categories-heading{
+        font-size: 3vh;
+        font-style: italic;
+      }
+      .caret{
+        margin-left: 15px;
+      }
+    }
+  }
+}
+
+//FAVORTIES
 .favorites-row{
+  margin-top: 20px;
 
   .favorites-col{
-
+    padding-left: 0;
 
     .favorites-pane{
 
@@ -37,33 +71,41 @@ img {
         width: 150px;
         margin: 5px;
         padding: 5px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        .material-icons{
+          margin-top: 10px;
+        }
         .restaurant-card-img{
           border-radius: 5px;
         }
         .restaurant-card-name{
           color: #212121;
           margin-top: 10px;
-          font-size: calc(.6em + .6vw);
-          width: 280px;
+          font-size: calc(.5em + .5vw);
+          width: 150px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
           text-transform: uppercase;
         }
         .restaurant-card-category{
           color: #616161;
-          font-size: calc(.5em + .5vw);
+          font-size: calc(.4em + .4vw);
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          text-transform: uppercase;
         }
       }
     }
   }
 }
 
-
+//VIEW ALL RESTAURANTS
 .viewall-container{
   // background-color: lightgrey;
   .viewall-cards-container{
     // display: inline-block;
+    margin-top: 30px;
     .viewall-card-container-header{
       color: #424242;
       font-size: calc(1.5em + 1.5vw);
@@ -75,13 +117,12 @@ img {
       padding: 5px;
       padding-top: 15px;
       padding-left: 10px;
-      width: 300px;
-      height: 300px;
 
       .viewall-header{
 
         .viewall-image{
-          border-radius: 3px;
+          border-radius: 5px;
+          width: 8vw;
         }
 
         .viewall-counter{
@@ -90,9 +131,13 @@ img {
 
         .viewall-name{
           color: #212121;
-          margin-top: 10px;
+          padding-top: 20px;
+          padding-bottom: 20px;
           font-size: calc(.7em + .7vw);
           width: 280px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
           text-transform: uppercase;
         }
 
