publish: update. login signup routing funcitonal
generated from commit 3dc2f734fcd71fd39eab45589ec79cedf370cca2

--- a/css/app.css
+++ b/css/app.css
@@ -5883,4 +5883,7 @@ img {
 .nav-message {
   color: #BDBDBD; }
 
+.footer-col {
+  border-top: 2px solid #BDBDBD; }
+
 /*# sourceMappingURL=app.css.map */
