--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -213,8 +213,35 @@ img {
       color: #424242;
     }
   }
-
 }
+
+.signup-modal{
+  background-color: #fff;
+  margin-top: 5%;
+  .btn{
+    margin: 20px;
+  }
+}
+
+//SIGNIN
+
+.login-container{
+  background-image: url('https://static1.squarespace.com/static/52b89e37e4b029ce89f7720d/t/55fafdc2e4b0ce4699685f90/1442512324850/bigstock-Coffee-Shop-Blur-Background-Wi-74331850.jpg?format=2500w');
+  background-size: cover;
+  .login{
+    background-color: #fff;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    padding: 10px;
+    .login-header{
+      font-size: calc(1.5em + 1.5vw);
+      color: #E65100;
+      text-transform: uppercase;
+    }
+  }
+}
+
+
 //Template
 .nav-message{
   color: #BDBDBD;
