styling detail view after crash

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -193,12 +193,11 @@ img {
       }
       .detailview-aside{
         margin-top: 30px;
-        // background-color: blue
         .detailview-about{
 
           .detailview-aside-review {
             padding: 10px;
-            .img-circle{
+            img{
               padding: 5px;
             }
           }
