--- a/css/app.css
+++ b/css/app.css
@@ -5773,22 +5773,26 @@ img {
   margin-top: 10px;
   margin-bottom: 20px; }
 
-.categories-bar .categories-dropdown .btn {
-  width: 89%;
-  color: #616161;
-  background-color: #fff;
-  border: 1px solid #E0E0E0;
-  border-radius: 0;
-  padding: 2px;
-  margin-top: 25px; }
-  .categories-bar .categories-dropdown .btn .categories-heading {
-    font-size: 3vh;
-    color: #616161; }
-  .categories-bar .categories-dropdown .btn .caret {
-    margin-left: 15px; }
-.categories-bar .btn:hover {
-  color: #424242;
-  border: 1px solid #424242; }
+.categories-bar {
+  margin-top: 30px; }
+  .categories-bar .categories-dropdown {
+    background-color: #fff;
+    border: 1px solid #E0E0E0; }
+    .categories-bar .categories-dropdown .btn {
+      color: #616161;
+      padding: 2px;
+      margin-top: 25px;
+      background-color: #fff;
+      border: 0px;
+      border-radius: 0; }
+      .categories-bar .categories-dropdown .btn .categories-heading {
+        font-size: 3vh;
+        color: #616161; }
+      .categories-bar .categories-dropdown .btn .caret {
+        margin-left: 15px; }
+  .categories-bar .categories-dropdown:hover {
+    color: #424242;
+    border: 1px solid #424242; }
 
 .favorites-row {
   margin-top: 20px;
@@ -5848,7 +5852,7 @@ img {
       padding-top: 20px;
       padding-bottom: 20px;
       font-size: calc(.7em + .7vw);
-      width: 280px;
+      width: 90%;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -5942,6 +5946,10 @@ img {
       font-size: calc(1.5em + 1.5vw);
       color: #E65100;
       text-transform: uppercase; }
+    .login-container .login .login-subheader {
+      font-size: calc(1em + 1vw);
+      color: #424242;
+      text-transform: uppercase; }
 
 .favorites-container .favorites-row .favorites-pane {
   margin-top: 20px;
@@ -5951,9 +5959,14 @@ img {
   margin-top: 10px;
   box-shadow: 0px 1px 10px -1px rgba(0, 0, 0, 0.75); }
 
-.navbar-row .nav-message {
+.template .nav-header {
+  text-transform: uppercase;
+  text-transform: uppercase;
+  font-size: calc(1.5em + 1.5vw);
+  color: #E65100; }
+.template .nav-message {
   color: #BDBDBD; }
 
-.footer-row {
+.footer {
   border-top: 2px solid #BDBDBD; }
 /*# sourceMappingURL=app.css.map */
