--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -145,7 +145,7 @@ img {
           padding-top: 20px;
           padding-bottom: 20px;
           font-size: calc(.7em + .7vw);
-          width: 280px;
+          width: 90%;
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
