--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -197,8 +197,17 @@ img {
       }
       }
       .detailview-aside{
+        color: #fff;
         margin-top: 30px;
         .detailview-about{
+          background-color: #FFD180
+;
+          .about-image{
+            float: left;
+            padding: 10px;
+            border-radius: 10px;
+          }
+
 
           .detailview-aside-review {
             padding: 10px;
@@ -242,7 +251,10 @@ img {
       width: 60%;
     }
     .table-price{
-      width: 20%;
+      width: 10%;
+    }
+    .table-available{
+      width: 20%
     }
     .detailview-menu-rows{
       // background-color: green;
@@ -344,6 +356,7 @@ img {
 
 .footer{
   border-top: 2px solid #BDBDBD;
+  margin-top: 20px;
   // background-color: #FFA000;
 }
 
