--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,9 +15,9 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 img {
   max-width: 100%;
 }
-// #app{
-// background-color: #E1F5FE;
-// }
+.container{
+background-color: #FFFDE7;
+}
 
 //VIEWALL SEARCH
 .viewall-lisitng-row{
