--- a/css/app.css
+++ b/css/app.css
@@ -5766,6 +5766,9 @@ button.close {
 img {
   max-width: 100%; }
 
+.container {
+  background-color: #FFFDE7; }
+
 .viewall-lisitng-row {
   background-color: blue;
   height: 6vw;
@@ -5841,7 +5844,8 @@ img {
     margin: 5px;
     padding: 5px;
     padding-top: 15px;
-    padding-left: 10px; }
+    padding-left: 10px;
+    background-color: #FFF3E0; }
     .viewall-container .viewall-cards-container .viewall-restaurant-card .viewall-header .viewall-image {
       border-radius: 5px;
       width: 8vw; }
@@ -5968,16 +5972,50 @@ img {
   margin-top: 10px;
   box-shadow: 0px 1px 10px -1px rgba(0, 0, 0, 0.75); }
 
-.template .nav-header {
-  text-transform: uppercase;
-  text-transform: uppercase;
-  font-size: calc(1.5em + 1.5vw);
-  color: #E65100; }
+.dashboard-container {
+  margin-bottom: 30px;
+  padding-bottom: 20px;
+  border-bottom: 2px solid #757575; }
+  .dashboard-container button {
+    margin-bottom: 20px; }
+
+.dashboard-specials {
+  margin-bottom: 30px;
+  padding-bottom: 20px;
+  border-bottom: 2px solid #757575; }
+  .dashboard-specials button {
+    margin-right: 20px; }
+
+.menu-pane .menu-panels {
+  margin-bottom: 30px; }
+  .menu-pane .menu-panels .menu-forms {
+    margin-bottom: 60px; }
+
+.template .nav-bar-col {
+  background-color: beige;
+  box-shadow: 0px 1px 10px -1px rgba(0, 0, 0, 0.75);
+  background-image: url("http://www.fortunebuilders.com/wp-content/uploads/2015/03/greenville-downtown-cityscape.jpg");
+  background-position: right;
+  background-size: cover;
+  margin-bottom: 30px; }
+  .template .nav-bar-col .nav-headers {
+    background-color: rgba(36, 44, 44, 0.3);
+    padding: 15px; }
+    .template .nav-bar-col .nav-headers .nav-header {
+      text-transform: uppercase;
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: calc(2em + 2vw);
+      color: #E65100; }
+    .template .nav-bar-col .nav-headers .nav-subheader {
+      text-transform: uppercase;
+      text-transform: uppercase;
+      font-size: calc(1.5em + 1.5vw);
+      color: #fff; }
 .template .nav-message {
-  color: #BDBDBD; }
+  color: #fff; }
 
 .footer {
   border-top: 2px solid #BDBDBD;
   margin-top: 20px; }
-
 /*# sourceMappingURL=app.css.map */
