--- a/css/app.css
+++ b/css/app.css
@@ -5777,19 +5777,22 @@ img {
   margin-bottom: 20px; }
 
 .categories-bar {
-  margin-top: 30px; }
+  margin-top: 50px;
+  margin-bottom: 50px; }
   .categories-bar .categories-dropdown {
     background-color: #fff;
-    border: 1px solid #E0E0E0; }
+    border: 2px solid #E0E0E0;
+    border-radius: 5px; }
     .categories-bar .categories-dropdown .btn {
       color: #616161;
       padding: 2px;
-      margin-top: 25px;
+      margin-top: 15px;
+      margin-bottom: 15px;
       background-color: #fff;
       border: 0px;
       border-radius: 0; }
       .categories-bar .categories-dropdown .btn .categories-heading {
-        font-size: 3vh;
+        font-size: 6vh;
         color: #616161; }
       .categories-bar .categories-dropdown .btn .caret {
         margin-left: 15px; }
@@ -5845,7 +5848,8 @@ img {
     padding: 5px;
     padding-top: 15px;
     padding-left: 10px;
-    background-color: #FFF3E0; }
+    margin-left: 13px;
+    margin-right: 13px; }
     .viewall-container .viewall-cards-container .viewall-restaurant-card .viewall-header .viewall-image {
       border-radius: 5px;
       width: 8vw; }
@@ -5996,11 +6000,9 @@ img {
   box-shadow: 0px 1px 10px -1px rgba(0, 0, 0, 0.75);
   background-image: url("http://www.fortunebuilders.com/wp-content/uploads/2015/03/greenville-downtown-cityscape.jpg");
   background-position: right;
-  background-size: cover;
-  margin-bottom: 30px; }
+  background-size: cover; }
   .template .nav-bar-col .nav-headers {
-    background-color: rgba(36, 44, 44, 0.3);
-    padding: 15px; }
+    background-color: rgba(36, 44, 44, 0.3); }
     .template .nav-bar-col .nav-headers .nav-header {
       text-transform: uppercase;
       text-transform: uppercase;
@@ -6015,7 +6017,8 @@ img {
 .template .nav-message {
   color: #fff; }
 
-.footer {
+.footer-container {
   border-top: 2px solid #BDBDBD;
-  margin-top: 20px; }
+  margin-top: 20px;
+  padding-top: 15px; }
 /*# sourceMappingURL=app.css.map */
