--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -47,7 +47,7 @@ background-color: #FFFDE7;
       border-radius: 0;
 
       .categories-heading{
-        font-size: 6vh;
+        font-size: 5vh;
         color: #616161;
         // font-style: italic;
       }
@@ -255,21 +255,22 @@ background-color: #FFFDE7;
   }
   .menu{
     .table-dish{
-      width: 20%;
+      width: 40%;
     }
     .table-description{
-      width: 60%;
+      width: 50%;
     }
     .table-price{
       width: 10%;
     }
-    .table-available{
-      width: 20%
-    }
+    // .table-available{
+    //   width: 20%
+    // }
     .detailview-menu-rows{
       // background-color: green;
       color: #616161;
       line-height: 35px;
+      border-bottom: 2px solid lightgrey;
     }
   }
 }
