broke down menu into components

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -19,6 +19,44 @@ img {
 background-color: #FFFDE7;
 }
 
+//IN THE MOOD HEADER
+
+.inthemood-headers{
+  .inthemood-header{
+    text-transform: uppercase;
+    font-size: calc(1.5em + 1.5vw);
+    color: #E65100;
+  }
+  .inthemood-subheader{
+    font-size: calc(.8em + .8vw);
+    color: #424242;
+  }
+
+}
+//REGISTRATION
+
+.registration-container{
+  background-image: url('https://static1.squarespace.com/static/52b89e37e4b029ce89f7720d/t/55fafdc2e4b0ce4699685f90/1442512324850/bigstock-Coffee-Shop-Blur-Background-Wi-74331850.jpg?format=2500w');
+  background-size: cover;
+
+  .registration-form{
+    background-color: #ffffff;
+    margin-top: 50px;
+    .form-input-div{
+      input{
+        margin-top: 20px;
+      }
+    }
+    .registration-image-uploads{
+      margin-bottom: 30px;
+      h4{
+        text-transform: uppercase;
+      }
+    }
+  }
+}
+
+
 //VIEWALL SEARCH
 .viewall-lisitng-row{
   background-color: blue;
@@ -270,7 +308,7 @@ background-color: #FFFDE7;
       // background-color: green;
       color: #616161;
       line-height: 35px;
-      border-bottom: 2px solid lightgrey;
+      border-bottom: 2px solid #EEEEEE;
     }
   }
 }
@@ -284,15 +322,6 @@ background-color: #FFFDE7;
     background-color: #fff;
     margin-top: 10%;
     margin-bottom: 10%;
-    .signup-header{
-      text-transform: uppercase;
-      font-size: calc(1.5em + 1.5vw);
-      color: #E65100;
-    }
-    .signup-subheader{
-      font-size: calc(.8em + .8vw);
-      color: #424242;
-    }
   }
 }
 .signup-modal{
