--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -406,6 +406,7 @@ background-color: #FFFDE7;
   margin-bottom: 30px;
   .header{
     margin-bottom: 40px;
+    height: 175px;
   }
   .menu-forms{
     background-color: blue;
